Bug 1686662 - Stop starting autoscroll if requested browsing context is not in foreground tab anymore r=smaug,Gijs

`AutoScrollParent` starts autoscroll even if the requested tab has already
been in background tab.  In this case, it does not make sense to start
autoscrolling in new foreground window since it may not be scrollable.

Additionally, our `mousedown` event default action activates the DOM window,
but in the DuckDuckGo's case, focus shouldn't be backed to the clicked tab.

Differential Revision: https://phabricator.services.mozilla.com/D106590